--- a/src/components/AddTodoForm/AddTodoForm.module.css
+++ b/src/components/AddTodoForm/AddTodoForm.module.css
@@ -1,6 +1,6 @@
 .add-todo-form {
-  border: 1px solid var(--text-color);
-  border-radius: 0.5rem;
+  border: 1px solid var(--main-text-color);
+  border-radius: 0.25rem;
   display: flex;
   max-width: 400px;
   margin: 0 auto;
@@ -27,8 +27,8 @@
   border-right: none;
   border-left: 1px solid var(--text-color);
   border-bottom: none;
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
   background-color: inherit;
   cursor: pointer;
   padding: 0.25rem 0.5rem;
